                    - '$.mouseleave()' ; use '$.trigger("mouseleave")' instead.
                    - '$.focusout()' ; use '$.trigger("focusout")' instead.
            - Apps :
                * Persons :
                    - The form class 'forms.contact.ContactNamesForm' is now deprecated.
                    - The class-view 'views.contact.ContactNamesEdition' is now deprecated.
                * Emails :
                    - The function 'utils.get_mime_image()' is deprecated; use 'utils.SignatureImage' instead.
                    - The constructor of 'utils.SignatureRenderer' takes now an argument "domain" ;
                      do not fill it is deprecated.
        # A new setting value "POPULATORS" has been added ; it allows to
          override the classes used by the command "creme_populate".
          Many classes 'Populate' have been reworked to facilitate their modification by inheritance ;
          the work has been split into several methods, and class attributes with declarative values have been added.
        # In 'creme_core.models' :
            - A class attribute 'CremeEntity._DELETABLE_INTERNAL_RTYPE_IDS' has been added to avoid writing
              methods '_pre_delete()' to manage the internal Relationships.
            - The class 'UserRole' has 2 new fields: uuid & extra_data (a JSONField which can be used to store whatever you want).
            - Some methods of 'CremeUser' accept instances of auxiliary models (i.e. with a method 'get_related_entity()')
              which do not inherit 'CremeEntity': has_perm_to_view*(), has_perm_to_change*(), has_perm_to_delete*().
            - The class 'EntityFilter' & 'HeaderFilter' got a JSONField "meta_data" to store custom data.
            - The class 'CustomFieldEnumValue' got a UUIDField.
        # In 'creme_core.views' :
            - The views which manage Bricks now display a minimal Brick (see 'creme_core.gui.bricks.ForbiddenBrick')